# awesome-docify

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  env.example
.github/workflows/: ci.yaml  ci.yml  pre-commit.yml
docs/: 01_prerequisites.md  02_make_commands.md  03_api_documentation.md  improvements.md  prerequisites.md
docs/existing_docs_tobedeleted/: additional-settings.md
fastapi_backend/: .env.example  .gitignore  README.md  alembic.ini  create_tables.py  openapi.json  pyproject.toml  start.sh  watcher.py
fastapi_backend/alembic_migrations/: env.py
fastapi_backend/app/: config.py  database.py  main.py  models.py  schemas.py  utils.py
fastapi_backend/app/ai_engine_service/: __init__.py  confidence_scorer.py  intent.py  prompts.py  rag_engine.py
fastapi_backend/app/data_ingestion_service/: __init__.py  document_loader.py  ingest.py  vector_store.py
fastapi_backend/app/query_extractor_service/: intent.py
fastapi_backend/app/routes/: debug.py  examples.py  query.py
fastapi_backend/commands/: generate_openapi_schema.py
fastapi_backend/testScripts/: check_db.py  check_latest.py  debug_add_issue.py  debug_chunk_mismatch.py  test_RAG.py  test_add_operation.py  test_chunks.py  test_chunkscroll.py  test_langchainOpenAI.py  test_openAIKey.py  test_qdrantPayload.py  test_qdrant_payload.py
fastapi_backend/tests/: test_main.py
nextjs-frontend/: .gitignore  README.md  jest.config.ts  middleware.ts  package.json
nextjs-frontend/__tests__/: home.test.tsx
nextjs-frontend/app/: globals.css  page.tsx
nextjs-frontend/app/api/v1/debug/json-files/: route.ts
nextjs-frontend/app/api/v1/debug/json-files/[filename]/: route.ts
nextjs-frontend/app/api/v1/query/: route.ts
nextjs-frontend/app/api/v1/save-change/: route.ts
nextjs-frontend/app/docs/: page.tsx
nextjs-frontend/app/login/: page.tsx
nextjs-frontend/app/password-recovery/: page.tsx
nextjs-frontend/app/password-recovery/confirm/: page.tsx
nextjs-frontend/app/register/: page.tsx
nextjs-frontend/components/ui/: diff-viewer.tsx
